# cuh-resp-model

./: .gitignore  .pylintrc  Installation_Windows.docx  README.md  TODO.md  Usage_Guide.docx  code.sh  launch.ps1  launch.sh  nick_todos_2025-06-05.md  pyproject.toml
src/cuh_resp_model/: __init__.py  __main__.py  app.py  cache.py  utils.py
src/cuh_resp_model/assets/: occupancy_example.xlsx  stays_example.xlsx
src/cuh_resp_model/components/: __init__.py  back_next.py  check_textbox_empty.js  ids.py  step1.py  step2.py  step3.py  step4.py  theme_toggle.js  theme_toggle.py  upload_box.py
src/cuh_resp_model/components/js/: check_textbox_empty.js  theme_toggle.js  toggle_other_input.js
src/cuh_resp_model/components/step1/: __init__.py  stepper_step.py
src/cuh_resp_model/components/step2/: __init__.py  arr.py
src/cuh_resp_model/pages/: about.py  home.py
test/: beta.ipynb  config.json  los_fitting.ipynb  sim.ipynb
