[project]
name = "cuh-resp-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash-compose>=2023.3.12",
    "dash-iconify>=0.1.2,<0.2",
    "dash-mantine-components>=0.15.1,<0.16",
    "humanize>=4.11.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2,<3",
    "isort>=5.13.2,<6",
    "pylint>=3.3.3,<4",
]
