[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuh-resp-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash-compose>=2023.3.12",
    "dash-iconify>=0.1.2,<0.2",
    "dash-mantine-components>=0.15.1,<0.16",
    "humanize>=4.11.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2,<3",
    "ipykernel>=6.29.5",
    "isort>=5.13.2,<6",
    "matplotlib>=3.10.0",
    "pylint>=3.3.3,<4",
]
